--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,78 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-    <title>Latest 5 Records</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1 class="text-center">Latest 5 Records</h1>
-      <ul class="list-group">
-        {% for record in data %}
-        <li class="list-group-item">
-          {% if record.action == 'push' %} 
-            {{ record.author }} pushed to <code>{{ record.to_branch }}</code> on {{ record.timestamp | format_timestamp }} 
-          {% elif record.action == 'pull_request' %} 
-            {{ record.author }} submitted a pull request from <code>{{ record.from_branch }}</code> to <code>{{ record.to_branch }}</code> on {{ record.timestamp | format_timestamp }} 
-          {% else %} 
-          {{ record.author }} merged branch <code>{{ record.from_branch }}</code> to
-          <code>{{ record.to_branch }}</code> on {{ record.timestamp | format_timestamp }} 
-          {% endif %}
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
-    <script>
-      function formatTimestamp(timestamp) {
-        const dt = new Date(timestamp);
-      
-        const options = {
-          day: "numeric",
-          month: "long",
-          year: "numeric",
-          hour: "numeric",
-          minute: "numeric",
-          timeZone: "UTC",
-          hour12: true,
-        };
-      
-        return dt.toLocaleString("en-US", options);
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <title>Lastest 15 sec data</title>
+</head>
+
+<body>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-8 offset-lg-2 col-xl-8 offset-xl-2">
+        <div class="card card-primary">
+          <div class="card-header text-center">Lastest 15 sec data</div>
+          <div class="card-body">
+            <ul class="list-group-flush">
+              {% for record in data %}
+              <li class="list-group-item">
+                {% if record.action == 'push' %}
+                  <span class="badge badge-success">{{ record.author }}</span> pushed to <a href="https://github.com/{{ record.to_branch }}">{{ record.to_branch }}</a> on <code>{{ record.timestamp | format_utc_timestamp }}</code>
+                {% elif record.action == 'pull_request' %}
+                  <span class="badge badge-success">{{ record.author }}</span> submitted a pull request from <a href="https://github.com/{{ record.from_branch }}">{{ record.from_branch }}</a> to
+                  <a href="https://github.com/{{ record.to_branch }}">{{ record.to_branch }}</a> on <code>{{ record.timestamp | format_utc_timestamp }}</code>
+                {% else %}
+                  <span class="badge badge-success">{{ record.author }}</span> merged branch <a href="https://github.com/{{ record.from_branch }}">{{ record.from_branch }}</a> to
+                  <a href="https://github.com/{{ record.to_branch }}">{{ record.to_branch }}</a> on <code>{{ record.timestamp | format_utc_timestamp }}</code>
+                {% endif %}
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
+  <script>
+    function formatTimestamp(timestamp) {
+
+      let dt = new Date(timestamp);
+      const day = dt.getDate();
+      const month = dt.toLocaleString('en-US', { month: 'long' });
+      const year = dt.getFullYear();
+      const hours = dt.getHours();
+      const minutes = dt.getMinutes();
+
+      let daySuffix;
+      if (day === 1 || day === 21 || day === 31) {
+        daySuffix = 'st';
+      } else if (day === 2 || day === 22) {
+        daySuffix = 'nd';
+      } else if (day === 3 || day === 23) {
+        daySuffix = 'rd';
+      } else {
+        daySuffix = 'th';
       }
-    </script>
-    <script>
-      setInterval(function () {
-        $.ajax({
-          url: "/every-15-seconds",
-          method: "GET",
-          success: function (data) {
-            var recordsList = $(".list-group");
-            recordsList.empty();
-            for (var i = 0; i < data.length; i++) {
-              var record = data[i];
-              var listItem = $("<li>").addClass("list-group-item");
-              if (record['action'] == "push") {
-                listItem.text(record['author'] + " pushed to " + record['to_branch'] + " on " + formatTimestamp(record['timestamp']));
-              } else if (record['action'] == "merge") {
-                listItem.text(record['author'] + " merged branch " + record['from_branch'] + " to " + record['to_branch'] + " on " + formatTimestamp(record['timestamp']));
-              } else {
-                listItem.text(record['author'] + " submitted a pull request from " + record['from_branch'] + " to " + record['to_branch'] + " on " + formatTimestamp(record['timestamp']));
-              }
-              recordsList.append(listItem);
+
+      const formattedHours = hours < 10 ? '0' + hours : hours;
+      const formattedMinutes = minutes < 10 ? '0' + minutes : minutes;
+      const formattedTimeString = `${day}${daySuffix} ${month} ${year} - ${formattedHours}:${formattedMinutes} ${hours < 12 ? 'AM' : 'PM'} UTC`;
+      return formattedTimeString;
+    }
+
+    setInterval(function () {
+      $.ajax({
+        url: "/every-15-seconds",
+        method: "GET",
+        success: function (data) {
+          var recordsList = $(".list-group-flush");
+          recordsList.empty();
+          for (var i = 0; i < data.length; i++) {
+            var record = data[i];
+            var listItem = $("<li>").addClass("list-group-item");
+            if (record.action == "push") {
+              listItem.html(`<span class="badge badge-success">${record['author']}</span> pushed to <a href="https://github.com/${record.to_branch}">${record.to_branch}</a> on <code>${formatTimestamp(record.timestamp.$date)}</code>`);
             }
-          },
-          error: function (xhr, status, error) {
-            console.log("Error:", error);
-          },
-        });
-      }, 15000); // 15 seconds in milliseconds
-    </script>
-  </body>
+            else if (record.action == "merge") {
+              listItem.html(`<span class="badge badge-success">${record['author']}</span> merged branch <a href="https://github.com/${record.from_branch}">${record.from_branch}</a> to <a href="https://github.com/${record.to_branch}">${record.to_branch}</a> on <code>${formatTimestamp(record.timestamp.$date)}</code>`);
+            } 
+            else if (record.action == "pull_request") {
+              listItem.html(`<span class="badge badge-success">${record['author']}</span> submitted a pull request from <a href="https://github.com/${record.from_branch}">${record.from_branch}</a> to <a href="https://github.com/${record.to_branch}">${record.to_branch}</a> on <code>${formatTimestamp(record.timestamp.$date)}</code>`);
+            }
+            recordsList.append(listItem);
+          }
+        },
+        error: function (xhr, status, error) {
+          console.log("Error:", error);
+        },
+      });
+    }, 10000); // 10 seconds in milliseconds
+  </script>
+</body>
 </html>
